--- a/index.html
+++ b/index.html
@@ -4,9 +4,77 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Homepage</title>
 </head>
 <body>
-    <H1>Maintence</H1>
+    <!-- Navigasi Start  -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/Web_Wisataku/">Git Portofolio</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-current="page" href="/Web_Wisataku/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="/Web_Wisataku/About">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://blog.yuliuspratama.dev/">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="/Web_Wisataku/Gallery">Portofolio List</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="/Web_Wisataku/Gallery">Contact</a>
+              </li>
+          </ul>
+            <button class="btn btn-outline-success" type="submit">Resume</button>
+        </div>
+      </div>
+  </nav>
+    <!-- Navigasi End  -->
+    <!-- Layout 1 Start -->
+    <div class="container-fluid bg-light text-dark border-top" style="width:100%">
+        <div class="card row align-items-center text-center">
+          <div class="col-10 card-body">
+              <h1  class="card-title" >Selamat datang di Portofolio Saya! </h1>
+              <p class="card-text">Saya seorang junior front-end developer yang senang berbagi beberapa proyek yang telah saya kerjakan di sini. Sebagai seorang yang masih relatif baru di industri ini, saya selalu mencari tahu tentang teknologi terbaru dan memperbaiki keterampilan saya dalam menciptakan pengalaman pengguna yang menarik..</p>
+              <p class="card-text">Portofolio ini berisi beberapa proyek yang telah saya kerjakan dalam perjalanan saya sebagai junior front-end developer. Saya berharap proyek-proyek ini memberikan gambaran tentang keterampilan dan kreativitas saya dalam memecahkan masalah dan menciptakan tampilan yang menarik.</p>
+              <p class="card-text">Terima kasih telah meluangkan waktu untuk melihat-lihat portofolio saya. Saya berharap Anda menemukan sesuatu yang menarik dan jika Anda memiliki saran atau umpan balik, jangan ragu untuk menghubungi saya.</p>
+          </div>
+        </div>
+      <!-- Card Portofolio -->
+      <div class="row align-items-center text-center mt-4 ">
+        <div class="col-12">
+            <H1>Portofolio</H1>
+        </div>
+      </div>
+      <div class=" gap-5 row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-4 align-items-center align-self-center justify-content-center text-center mt-4  " style="place-items: center;">
+        <div class=" col card" style="width: 18rem;">
+            <img src="https://images.unsplash.com/photo-1544982905-1e48284f80c3?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=800&ixid=MnwxfDB8MXxyYW5kb218MHx8amF2YXNjcmlwdHx8fHx8fDE2NzYzNjA2MjM&ixlib=rb-4.0.3&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=900" class="card-img-top" alt="vacation">
+            <div class="card-body">
+              <h5 class="card-title">Rakamin</h5>
+              <p class="card-text">Pengerjaan HomeWork Rakamin </p>
+              <a href="/RakaminHW" class="btn btn-primary">Melihat</a>
+          </div>
+          </div>
+      <!-- Card porto folio end -->
+      </div>
+    <!-- Layout 1 End -->
+      <!-- footer start -->
+  <div class="d-flex flex-column h-100">    
+    <footer class="footer mt-auto py-3 bg-primary">
+      <div class="container">
+        <span class="text-light">Dibuat Dengan ❤ Oleh Yulius </span>
+      </div>
+    </footer>
+  </div>
+  <!-- fotter end -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
