--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
     <!-- Navigasi Start  -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/Web_Wisataku/">Git Portofolio</a>
+        <a class="navbar-brand" href="/">Git Portofolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link disabled" aria-current="page" href="/Web_Wisataku/">Home</a>
+              <a class="nav-link disabled" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="/Web_Wisataku/About">About</a>
+              <a class="nav-link disabled" href="/">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://blog.yuliuspratama.dev/">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="/Web_Wisataku/Gallery">Portofolio List</a>
+              <a class="nav-link disabled" href="/">Portofolio List</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="/Web_Wisataku/Gallery">Contact</a>
+                <a class="nav-link disabled" href="/">Contact</a>
               </li>
           </ul>
             <button class="btn btn-outline-success" type="submit">Resume</button>
@@ -70,7 +70,7 @@
   <div class="d-flex flex-column h-100">    
     <footer class="footer mt-auto py-3 bg-primary">
       <div class="container">
-        <span class="text-light">Dibuat Dengan ❤ Oleh Yulius </span>
+        <span class="text-light">Dibuat Dengan ❤ Oleh Yulius Pratama </span>
       </div>
     </footer>
   </div>
